# SoftwareEngineeringProject

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_app.cmd
flaskr/: __init__.py  auth.py  jokes.py  schema.sql
flaskr/static/: style.css
flaskr/templates/auth/: login.html  register.html
flaskr/templates/jokes/: my_jokes.html  take_a_joke.html  update_joke.html
master_of_jokes/: __init__.py  auth.py  db.py  jokes.py  schema.sql
master_of_jokes/templates/: base.html
master_of_jokes/templates/auth/: login.html  register.html
master_of_jokes/templates/jokes/: leave_a_joke.html  my_jokes.html  take_a_joke.html  view_joke.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
