[project]
name = "master_of_jokes"
version = "1.0.0"
description = "Master of Jokes"
dependencies = [
    "flask"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["master_of_jokes"]